# ovlab

./: .dockerignore  .gitignore  .gitmodules  README.md  pytest.ini
code/apps/benchctl/: README.md  pyproject.toml
code/apps/benchctl/src/ovlab_benchctl/: __init__.py  errors.py  models.py  resolver.py  schema.py  strict_yaml.py
code/apps/runner/: README.md  pyproject.toml
code/apps/runner/src/ovlab_runner/: __init__.py  configuration.py  connection.py  errors.py  execution.py  lifecycle.py  plan.py  provenance.py  recorder.py  runner.py
code/apps/runner/src/ovlab_runner/artifacts/: __init__.py  base.py  codec.py  filesystem.py  layout.py
code/policies/openvla-vanilla/: README.md  pyproject.toml
code/policies/openvla-vanilla/src/ovlab_openvla_vanilla/: __init__.py  adapter.py  errors.py  runtime.py  settings.py
code/tests/helpers/: __init__.py  contexts.py  fake_libero.py  fake_openvla.py  metric_traces.py  mock_benchmark.py  mock_policy.py  mock_specs.py  runner_fixtures.py
code/tests/integration/: test_mock_rollout.py
code/tests/manual/: README.md
configs/: README.md
configs/artifacts/: filesystem.yaml
configs/benchmarks/libero/: base.yaml  goal.yaml  libero10.yaml  object.yaml  spatial-smoke.yaml  spatial.yaml
configs/experiments/: libero-mock-smoke.yaml  libero-spatial-vanilla.yaml  libero-vanilla-smoke.yaml  mock-e2e-smoke.yaml
configs/local/: README.md  profile.example.yaml
configs/metrics/: action-safe-v1.yaml
configs/protocols/: libero-smoke-v1.yaml  libero-standard-v1.yaml  smoke-v1.yaml
configs/resources/: registry.yaml
deploy/environments/: ISSUES.md
deploy/scripts/: test.sh
docs/: adapter-contracts.md
lab/: README.md
(+84 files in other folders)
